Refactoring DTO`s, Services, Controllers